--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+frontend/src/resources/secrets.js
+
 # dependencies
 frontend/node_modules
 frontend/.pnp
